--- a/SpinningWheel/wwwroot/css/site.css
+++ b/SpinningWheel/wwwroot/css/site.css
@@ -1,104 +1,133 @@
-﻿html {
-  font-size: 14px;
-}
+﻿/* Background */
+@media (min-width: 1080px) {
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-    margin: 0;
-    height: 100vh;
-    background-color: orange;
-}
-
-/* Background */
-@media (min-width: 1024.05px) {
-   
-}
-
-/* Home */
-.logo-gs img {
-    width: 100%;
-    height: auto;
-}
-
-.title-CRP p {
-    font-size: 40px;
-}
-
-.startBtn button {
-    background-color: white;
-    border-radius: 50px;
-    text-align: center;
-}
-
-/* Video Watching */
-.video-thumbnail {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
-    margin: 20px auto;
-}
-
-    .video-thumbnail img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 100%;
+    * {
+        font-family: 'Poppins', sans-serif;
     }
 
+    body, html {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-color: orange;
+    }
 
-/* Spinning Wheel */
+    /* Home */
+    .logo-gs img {
+        width: 100%;
+        height: auto;
+    }
 
-@import url('https:fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+    .title-CRP p {
+        font-size: 100%;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
+    .startBtn button {
+        background-color: white;
+        border-radius: 50px;
+        text-align: center;
+    }
 
-.container {
-    position: relative;
-    width: 400px;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    /* WatchVideo */
+    .video-thumbnail {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        margin: 20px auto;
+    }
 
-    .container .spinBtn {
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        background: #fff;
-        border-radius: 50%;
-        z-index: 10;
+        .video-thumbnail img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 100%;
+        }
+    .tiktok-screen {
+        background-color: white;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        height: 60vh;
+        outline:
+    }
+
+    /* EnterName */
+    .enterName-container {
+        height: 100vh;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .enterName-container #inputName {
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+
+        .enterName-container label, input {
+            font-size: 60px;
+            text-align: center;
+            border-radius: 50px;
+            margin-bottom: 25px;
+        }
+
+        .enterName-container input {
+            border: solid 5px rgb(252, 115, 51);
+            outline: 15px solid rgba(28,110,164,0.24);
+            outline-offset: 0px;
+        }
+
+        .enterName-container::placeholder {
+            color: #d9d9d9;
+        }
+
+        .enterName-container #skipBtn {
+            position:absolute;
+            bottom: 0;
+            left: 50px;
+            right: 50px;
+            text-align: center;
+            color: #fc6f35;
+        }
+
+    /* SpinWheel */
+
+    @import url('https:fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
+    .container {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
-        text-transform: uppercase;
-        font-weight: 600;
-        color: #333;
-        letter-spacing: 0.1em;
-        border: 4px solid rgba(0,0,0,0.75);
-        cursor: pointer;
-        user-select: none;
     }
 
-    .container .spinBtn::before {
+        .container .spinBtn {
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            background: #fff;
+            border-radius: 50%;
+            z-index: 10;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-transform: uppercase;
+            font-weight: 600;
+            color: #333;
+            letter-spacing: 0.1em;
+            border: 4px solid rgba(0,0,0,0.75);
+            cursor: pointer;
+            user-select: none;
+        }
+
+        .container .spinBtn::before {
         content: '';
         position: absolute;
         top: -28px;
@@ -106,9 +135,9 @@ body {
         height: 30px;
         background: #fff;
         clip-path: polygon(50% 0%, 15% 100%, 85% 100%);
-    }
+        }
 
-    .container .wheel {
+        .container .wheel {
         position: absolute;
         top: 0;
         left: 0;
@@ -119,10 +148,9 @@ body {
         overflow: hidden;
         box-shadow: 0 0 0 5px #333, 0 0 0 15px #333, 0 0 0 18px #111;
         transition: transform 5s ease-in-out;
+        }
 
-    }
-
-    .container .wheel .number {
+        .container .wheel .number {
         position: absolute;
         width: 50%;
         height: 50%;
@@ -135,20 +163,21 @@ body {
         align-items: center;
         user-select: none;
         cursor: pointer;
-    }
+        }
 
-    .container .wheel .number span {
+        .container .wheel .number span {
         position: relative;
         transform: rotate(45deg);
         font-size: 2em;
         font-weight: 700;
         color: #fff;
         text-shadow: 3px 5px 2px rgba(0,0,0,0.15);
-    }
+        }
 
-    .container .wheel .number span::after {
+        .container .wheel .number span::after {
         content: '$';
         position: absolute;
         font-size: 0.75em;
         font-weight: 500;
-    }
+        }
+}
