--- a/SpinningWheel/Views/Home/Index.cshtml
+++ b/SpinningWheel/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
-﻿<div>
-    <div class="logo-gs">
-        <img src="~/images/GS Hitam 1.png" />
+﻿@{
+    Layout = "_HomeLayout";
+}
+
+<div class="home-container">
+    <div class="logo-gs-putih">
+        <img src="~/images/Logo-GS Putih.png" />
     </div>
 
     <div class="title-CRP">
@@ -8,14 +12,11 @@
     </div>
 
     <div class="startBtn">
-        <div>
-            <input id="redirect" type="submit" value="PRESS TO START" class="btn btn-default" />
-        </div>
+        <input id="redirect" type="submit" value="PRESS TO START" class="btn btn-default" />
     </div>
 
     <div class="tiktok-screen">
-        <video>
-        </video>
+        <video src="~/videos/Video-Home.mov" autoplay muted loop playsinline></video>
     </div>
 </div>
 
