--- a/SpinningWheel/Views/SpinWheel/Index.cshtml
+++ b/SpinningWheel/Views/SpinWheel/Index.cshtml
@@ -204,5 +204,25 @@
             document.location = '@Url.Action("Index", "Main")';
         });
     });
+
+    let idleTime = 0;
+    const idleTimeout = 300; // 5 minutes in seconds
+    const homePageUrl = "/Home/Index"; // Adjust the URL of your home page
+
+    const idleInterval = setInterval(timerIncrement, 1000);
+
+    document.addEventListener('mousemove', resetIdleTime);
+    document.addEventListener('keydown', resetIdleTime);
+
+    function timerIncrement() {
+        idleTime++;
+        if (idleTime >= idleTimeout) {
+            window.location.href = homePageUrl;
+        }
+    }
+
+    function resetIdleTime() {
+        idleTime = 0;
+    }
 </script>
 
