--- a/SpinningWheel/Views/EnterName/Index.cshtml
+++ b/SpinningWheel/Views/EnterName/Index.cshtml
@@ -2,11 +2,13 @@
     Layout = "_EnterNameLayout";
 }
 
+@model User;
+
 <div class="enterName-container">
     <div>
-        <form id="inputName">
+        <form id="inputName" asp-controller="EnterName" asp-action="Index" method="post">
             <label>Enter your name :</label>
-            <input type="text" placeholder="Your name" onkeypress="checkEnter(event)" />
+            <input type="text" placeholder="Your name" asp-for="Name" onkeypress="checkEnter(event)" />
             <span class="icon" onclick="handleIconClick()">
                 <i class="fas fa-search"></i>
             </span>
@@ -35,6 +37,26 @@
     });
 
     function submitForm() {
-        window.location.href = '@Url.Action("Index", "Main")';
+        $("#inputName").submit();
+    }
+
+    let idleTime = 0;
+    const idleTimeout = 300; // 5 minutes in seconds
+    const homePageUrl = "/Home/Index"; // Adjust the URL of your home page
+
+    const idleInterval = setInterval(timerIncrement, 1000);
+
+    document.addEventListener('mousemove', resetIdleTime);
+    document.addEventListener('keydown', resetIdleTime);
+
+    function timerIncrement() {
+        idleTime++;
+        if (idleTime >= idleTimeout) {
+            window.location.href = homePageUrl;
+        }
+    }
+
+    function resetIdleTime() {
+        idleTime = 0;
     }
 </script>
