--- a/SpinningWheel/Views/Main/Index.cshtml
+++ b/SpinningWheel/Views/Main/Index.cshtml
@@ -12,7 +12,9 @@
         <div>
             <img src="~/images/Icon-User.png" alt="user-male-circle" />
         </div>
-        <span>@Model.userCount</span>
+        <span>
+            @Model.userCount
+        </span>
         <span>Pengunjung</span>
         <div>
             <img src="~/images/Icon-End.png" alt="logout-rounded" />
@@ -21,31 +23,31 @@
     </div>
 
     <div class="main-content-container">
-        <label>Hello, @Model.user.Name</label>
+        <label>HELLO, @Model.user.Name.ToString().ToUpper()</label>
         <p>Cost Reduction Program (CRP)</p>
         <div id="main-content-menu">
             <div id="item-1" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-Automation.png" />
                 <div id="text">Automation</div>
             </div>
             <div id="item-2" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-Multisource.png" />
                 <div id="text">Multisource Material</div>
             </div>
             <div id="item-3" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-VAVE.png" />
                 <div id="text">VA / VE</div>
             </div>
             <div id="item-4" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-Reduce.png" />
                 <div id="text">Reduce Rejection</div>
             </div>
             <div id="item-5" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-Job.png" />
                 <div id="text">Job Balancing</div>
             </div>
             <div id="item-6" class="item">
-                <img src="~/images/Icon-User.png" />
+                <img src="~/images/Icon-Increase.png" />
                 <div id="text">Increase Productivity</div>
             </div>
 
