--- a/SpinningWheel/wwwroot/css/site.css
+++ b/SpinningWheel/wwwroot/css/site.css
@@ -100,6 +100,10 @@
         }
     }
 
+    .pulse {
+        animation: pulse 1s infinite ease-in-out alternate;
+    }
+
     .tiktok-screen {
         background-color: white;
         border-top-left-radius: 3vh;
@@ -314,7 +318,7 @@
                 border-radius: 5vh;
                 padding: 1vh;
                 font-size: 2vh;
-                margin-top: 6vh;
+                margin-top: 7vh;
                 outline: 12px solid #231354;
             }
 
@@ -352,6 +356,7 @@
         outline-offset: 0px;
         background-color: #ffffff;
         padding-right: 30px;
+        margin-top: 13vh;
     }
 
     .enterName-container::placeholder {
@@ -360,18 +365,21 @@
 
     .icon {
         position: absolute;
-        top: 50%;
-        right: 10px;
+        top: 55.4vh;
+        left: 49.6vh;
         transform: translateY(-50%);
         cursor: pointer;
-        color: #555;
+        color: #000000;
     }
+
+        .icon img {
+            height: 4.6vh;
+        }
 
     .enterName-container #skipBtn {
         position: absolute;
-        bottom: 0;
-        left: 50px;
-        right: 50px;
+        left: 47%;
+        right: 50%;
         color: #fc6f35;
         font-size: 2vh;
         bottom: 1vh;
@@ -441,8 +449,8 @@
 #spin-btn {
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 128%;
-    left: 50%;
+    top: 119%;
+    left: 12%;
     height: 7vh;
     width: 34vh;
     border-radius: 4vh;
@@ -455,6 +463,7 @@
     letter-spacing: 0.1em;
     font-weight: 600;
     padding: 1vh 2vh;
+    animation: pulse 1s infinite ease-in-out alternate;
 }
 
 #close {
@@ -531,7 +540,7 @@
         width: 20vh;
         position: absolute;
         top: 23%;
-        left: 28%;
+        left: 32%;
     }
 
 
@@ -541,7 +550,7 @@
     width: 12vh;
     position: absolute;
     top: 45vh;
-    left: 37%;
+    left: 39%;
     background-color: transparent;
     border-radius: 5vh;
     padding: 1vh;
@@ -778,4 +787,86 @@
     to {
         transform: translateY(200px);
     }
+}
+
+/* Animation */
+
+.hidden {
+    display: none;
+}
+
+/* On Exit Animation */
+@keyframes exitAnimation {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    to {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+}
+
+.exit {
+    animation: exitAnimation 1s ease-in-out;
+}
+
+/* On Entrance Animation */
+@keyframes entranceAnimation {
+    from {
+        opacity: 0;
+        transform: translateY(400px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.entrance {
+    animation: entranceAnimation 0.6s ease-in-out;
+}
+
+/* Home Page Animation */
+#logo-gs-putih.exit {
+    animation-delay: 0s;
+}
+
+#title-CRP.exit {
+    animation-delay: 0.3s;
+}
+
+#startBtn.exit {
+    animation-delay: 0.6s;
+}
+
+/* Main Page Animation */
+#enter-your-name, #skip {
+    position: absolute;
+}
+
+#enter-your-name.entrance {
+    animation-delay: 0s;
+}
+
+/* Blinking Animation */
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.blinking {
+    animation: blink 1s infinite;
 }
