update icon, spinwheel

--- a/SpinningWheel/Views/EnterName/Index.cshtml
+++ b/SpinningWheel/Views/EnterName/Index.cshtml
@@ -49,7 +49,7 @@
     $(function(){
       $("#skipBtn").click(function (e) {
          e.preventDefault();
-         window.location.href = '@Url.Action("Index", "Home")';
+         window.location.href = '@Url.Action("Index", "Main")';
       });
     });
 
